--- a/docker/jupyter/Dockerfile
+++ b/docker/jupyter/Dockerfile
@@ -1,12 +1,15 @@
 FROM tensorflow/tensorflow:latest-py3-jupyter
 
 COPY requirements.txt /tmp/
+COPY requirements_git.txt /tmp/
 
 RUN apt-get update && apt-get -y install \
 	gcc \
-    graphviz
+    graphviz \
+    git
 
 RUN pip3 install -r /tmp/requirements.txt
+RUN pip3 install -r /tmp/requirements_git.txt
 
 EXPOSE 8888
 CMD ["jupyter","lab","--allow-root","--ip","0.0.0.0"]
